@@ -4,7 +4,13 @@ Changelog
 1.5 (unreleased)
 ----------------
 
-- Nothing changed yet.
+BREAKING CHANGES
+
+- Improve reindexContents api:
+   - add update_metada param
+   - add notify_modified param (False by default)
+   - indexes: if not set, reindex all indexes, if empty sequence, reindex no index
+  [thomasdesvenain]
 
 
 1.4 (2018-01-04)
